--- a/springapp/src/main/resources/application.properties
+++ b/springapp/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-# MySQL Configuration (active)
-spring.datasource.url=jdbc:mysql://localhost:3306/app_db?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=sanjeevi2005
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# NeonDB PostgreSQL Configuration
+spring.datasource.url=jdbc:postgresql://ep-misty-queen-ad7ocz0j-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_9hjgpFMf4szR
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-# H2 Configuration (commented out)
+# H2 Configuration (fallback)
 # spring.datasource.url=jdbc:h2:mem:testdb
 # spring.datasource.driver-class-name=org.h2.Driver
 # spring.datasource.username=sa
@@ -13,8 +13,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.org.springframework.boot.autoconfigure=DEBUG
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 spring.jpa.defer-datasource-initialization=true
 
