--- a/springapp/Dockerfile
+++ b/springapp/Dockerfile
@@ -1,12 +1,12 @@
-# Build stage
-FROM maven:3.8.6-eclipse-temurin-17 AS build
-WORKDIR /app
-COPY pom.xml .
-COPY src ./src
-RUN mvn clean package -DskipTests
+FROM openjdk:17-jdk-slim
 
-# Run stage
-FROM eclipse-temurin:17-jdk
 WORKDIR /app
-COPY --from=build /app/target/*.jar app.jar
-ENTRYPOINT ["java", "-jar", "app.jar"]
+
+COPY . .
+
+RUN chmod +x ./mvnw
+RUN ./mvnw clean package -DskipTests
+
+EXPOSE 8080
+
+CMD ["java", "-jar", "target/*.jar"]
