--- a/reactapp/.env
+++ b/reactapp/.env
@@ -13,4 +13,4 @@ REACT_APP_EMAILJS_PUBLIC_KEY=NYNNqsZ0nxbfgcNs2
 # Backend API Configuration
 # For development: http://localhost:8080/api
 # For production: replace with your deployed backend URL
-REACT_APP_API_URL=http://localhost:8080/api
+REACT_APP_API_URL=https://quizmaster-backend-m800.onrender.com/api
